# seisimic

./: .gitignore  LICENSE  README.md  deploy.sh  deploy_metadata.json  pyproject.toml
azure_devbox/: README.md  devnet.conf  setup.sh
datadisk/: README.md  datadisk.conf  init_disk.sh  mount_disk.sh  unmount_disk.sh
devnet/: README.md  clean-image.sh
devnet/azure/: parameters.json  template.json
devnet/nginx/: README.md  devnet.template  nginx.conf
devnet/supervisor/: README.md  devnet.conf
yocto/: README.md  artifact.py  azure_common.py  azure_deploy.py  build.py  cfg.py  cli.py  deploy.py  genesis_deploy.py  git.py  measurements.py  metadata.py  parser.py  paths.py  proxy.py  ruff.toml  summit_client.py  validators.py
yocto/cloud/: __init__.py  base_parser.py  cloud_api.py  cloud_config.py  cloud_factory.py  cloud_parser.py
yocto/cloud/azure/: __init__.py  api.py  defaults.py
yocto/cloud/gcp/: __init__.py  api.py  defaults.py
yocto/conf/: conf.py
yocto/config/: __init__.py  build_config.py  configs.py  deploy_config.py  deployment_config.py  domain_config.py  mode.py  utils.py  vm_config.py
yocto/deployment/: __init__.py  deploy.py  deploy_bob.py  proxy.py  validators.py
yocto/image/: __init__.py  build.py  git.py  measurements.py
yocto/utils/: __init__.py  artifact.py  metadata.py  parser.py  paths.py
